Fixed some of the homepage text positioning in reference to the product header on small viewports, properly added the 'about us' page so that it can actually be added and added an 'essentials' filter to the header

--- a/public/css/teamprojectdraft.css
+++ b/public/css/teamprojectdraft.css
@@ -116,3 +116,10 @@
     font-size: 25px;
     font-weight: 300;
 }
+@media(max-width: 767px){
+
+    .card-body h4 {
+        min-height: 0px;
+        margin-bottom: 1rem;
+    }
+}
